mule-user-guide/v/3.6/dotnet-connector-guide.adoc
=  DotNet连接器指南
:keywords: dotnet connector, dotnet, dot net, microsoft, c#, c sharp, visual studio, visual basic

DotNet连接器允许你从Mule流中调用.NET代码。

*DotNet Documents*：

*  link:/mule-user-guide/v/3.6/dotnet-connector-user-guide[DotNet连接器用户指南]
*  link:/mule-user-guide/v/3.6/dotnet-connector-migration-guide[DotNet连接器迁移指南]
*  link:/mule-user-guide/v/3.6/dotnet-connector-faqs[DotNet连接器常见问题]
*  link:/release-notes/dotnet-connector-release-notes[DotNet连接器发行说明]
*  link:_attachments/dotnet-connector-samples.zip[dotnet-connector-samples.zip]

== 假设

本文档假定您熟悉Mule， link:/anypoint-studio/v/6/index[Anypoint Studio界面]和 link:/mule-user-guide/v/3.6/global-elements[全球元素]。此外，假定您熟悉Microsoft .NET Framework。

要完成本教程，您需要在您的机器上安装以下组件：

*  http://www.microsoft.com/net[Microsoft .NET框架]

*  Anypoint Studio，Mule的图形界面。有关详细信息，请参阅 link:/anypoint-studio/v/5/[下载并启动Anypoint Studio]。

*Note:* .NET连接器版本1.0与版本2.0不兼容。如果您是.NET连接器1.0的现有用户，请参阅 link:/mule-user-guide/v/3.6/dotnet-connector-migration-guide[.NET连接器迁移指南]。


== 在Anypoint Studio中安装DotNet连接器

您可以使用 link:/mule-user-guide/v/3.6/installing-connectors[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中安装连接器。

== 示例

本示例介绍DotNet连接器并向您展示如何将其配置为在.NET程序集中执行方法。

该示例使用以下Mule消息处理器：

[%header%autowidth.spread]
|===
| {组件{1}}说明
| *DotNet Connector*  |从Mule流中执行Microsoft .NET代码。
| *HTTP Connector*  |使示例应用程序能够接收和发送HTTP请求。
| *Set Payload Transformer*  |集合负载转换器将负载设置为您定义的任何值。有效负载可以是文字串或Mule表达式。
| *{{0}}*  | DataMapper是一个Mule转换器，它提供简单但功能强大的复杂数据转换的可视化设计，以用于Mule流
|===

=== 第1步。创建一个.NET组件

. 启动Visual Studio并创建一个新的C＃类库项目。
. 在Anypoint Studio中，选择*File*> *New*> *Project*。
. 在*New Project*对话框中，选择Visual C＃下的类库模板。将该项目命名为“Test.SampleComponent”。
+
image:dotnetcomponent.png[dotnetcomponent]
+
. 用下面的代码创建一个名为`Sample`的类：
+
[source, code, linenums]
----
namespace Test.SampleComponent
{
   public class Sample
   {
       public object ExecuteComplex(Person person)
       {
         person.Name += " updated from .net";          
         person.MyRide.Brand = person.MyRide.Brand.Replace("GM", Chevrolet");
         person.MyRide.Model = person.MyRide.Model + " - " + "400x";
         person.MyRide.ExteriorColor.Name += "ISH";
         person.MyRide.ExteriorColor.RGB = "no clue";
         return person;
       }
   }
}
----
+
. 编译项目以创建`Test.SampleComponent.dll`程序集。
. 将.dll文件复制到`C:\Sample`目录。

=== 第2步。创建一个新的Anypoint Studio项目

. 启动Anypoint Studio并创建一个新项目。
. 选择*File*> *New*> *Mule Project*。
. 在New Mule Project配置菜单中，为该项目提供一个名称：`dotnet_demo`。
. 点击*Finish*。

一个新的项目打开时用一个空白画布来构建流程，以及带有Message Processors的调色板在右侧。

=== 第3步。创建一个DotNet全局元素

要创建和配置DotNet全局元素，请按照下列步骤操作：

. 点击画布底部的*Global Elements*标签，然后点击*Create*。
. 使用*DotNet Connector*作为过滤器进行定位，然后选择全局类型：
+
image:Global+Type.png[环球+类型]
+
. 选择*DotNet: External Assembly*并点击*OK*。
. 配置外部程序集全局类型：
+
image:External+Assembly.png[外部+大会]
+
[%header%autowidth.spread]
|===
| {参数{1}}值
| *Name*  | Dot_Net_External_Assembly
| *Enable DataSense*  |真（选中复选框）
| *Scope*  |瞬态
| *Grant Full Trust to the .NET assembly*  |真（选中复选框）
| *Declared methods only*  |真（选中复选框）
| *Assembly Path*  | Test.SampleComponent.dll文件的路径
|===
+
配置DotNet连接器时，您将引用此全局元素。

=== 第4步。创建演示流程

. 在Anypoint Studio中，将HTTP连接器拖放到画布上，并选择它以打开属性编辑器控制台。

. 添加新的HTTP侦听器配置全局元素：

.. 在*General Settings*中，点击添加*button*：
+
image:httplistener.png[httplistener]
+
..  配置以下HTTP参数：
+
image:httparameters.png[httparameters]
+
[%header%autowidth.spread]
|===
| {字段{1}}值
| *Port*  | 8081
| *Path*  |的dotnet
| *Host*  |本地主机
| *Exchange Patterns*  |请求 - 响应
| *Display Name*  | HTTP（或您喜欢的任何其他名称）
|===
+
. 引用HTTP侦听器配置全局元素：
+
image:httpreference.png[httpreference]

. 将一组负载转换器拖到画布中，然后选择它以打开属性编辑器控制台。

. 按如下所示配置所需的过滤器参数：
+
image:SetPayload+1.png[SetPayload + 1]
+
[%header%autowidth.spread]
|===
| {字段{1}}值
| *Value*  | `{ "name" : "bar", "lastName" :  "foo", "id" : 1, "myRide" : \{ "Model" : "Coupe", "Brand" : "GM", "Color" : \{ "Name" : "red", "RGB" : "123,220,213" } } }}`
| *Display Name*  |设置有效负载（或您喜欢的任何其他名称）
|===
+
您在*Value*字段中输入的字符串表示Person类的序列化JSON对象：
+
[source, code, linenums]
----
namespace Test.SampleComponent{ 
  public class Person
    {
        public string Name {
          get; set;
        }
        public int Id {
          get; set;
        }
        public string LastName {
          get; set;
        }
        public Car MyRide {
          get; set;
        }
    }
    public class Car
    {
       public string Model {
         get; set;
       }
       public string Brand {
         get; set;
       }
       public Color ExteriorColor {
         get; set;
       }
    }
}
----
+
. 从调色板中拖出一个DataMapper，并在Set Payload变换器之后将其放置在画布中。

. 按照以下方式配置参数：
+
image:jsontoexecutecomplex.png[jsontoexecutecomplex]
+
[%header%autowidth.spread]
|===
| {字段{1}}值
| *Display Name*  |将JSON复制到ExecuteComplex（或您喜欢的任何其他名称）
2 + | *Input*
| *Type*  | JSON
| *From Example*  |正确（检查）
| *Sample*  |输入input.json示例文件的路径。
|===
+
在运行此应用程序之前，请创建一个名为*input.json*的JSON样本文件，并将以下内容复制到该文件中：

[source, code, linenums]
----
"person" : { "name" : "bar", "lastName" :  "foo", "id" : 1, "myRide" : { "Model" : "Coupe", "Brand" : "GM", "Color" : { "Name" : "red", "RGB" : "123,220,213" }  } }}.
----
+
. 点击*Create Mapping*。
+
image:datamapper-mappingscreen.png[DataMapper的-mappingscreen]
+
. 将DotNet连接器拖放到Palette中，然后将其放置在画布后面的负载转换器中。如下所示配置DotNet连接器。
+
image:DotNet+Connectorscreen.png[DOTNET的+ Connectorscreen]
+
[%header%autowidth.spread]
|===
| {字段{1}}值
| *Operation*  |执行
| *Method name*  | Test.SampleComponent.Sample.ExecuteComplex（Test.SampleComponent.Person person）
| *Display Name*  | DotNet连接器（或您喜欢的任何其他名称）
| *Config Reference*  | Dot_Net_Resource_External_Assembly
|===
+
请注意，*Config Reference*字段引用先前创建的DotNet全局元素。

完成上述步骤后，您的应用程序流程应如下所示：

image:complete+application+flow.png[完整+应用+流]

===  XML代码

[source, xml, linenums]
----
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:dotnet="http://www.mulesoft.org/schema/mule/dotnet" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
 xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd 
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd 
http://www.mulesoft.org/schema/mule/dotnet http://www.mulesoft.org/schema/mule/dotnet/current/mule-dotnet.xsd 
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd 
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd"> 
 <dotnet:externalConfig name="DotNet_External_Assembly" scope="Transient" path="C:\Samples\Test.SampleComponent.dll" doc:name="DotNet: External Assembly"/>
<http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" basePath="dotnet" doc:name="HTTP Listener Configuration"/>
<http:connector name="HTTP_HTTPS" cookieSpec="netscape" validateConnections="true" sendBufferSize="0" receiveBufferSize="0" receiveBacklog="0" clientSoTimeout="10000" serverSoTimeout="10000" socketSoLinger="0" doc:name="HTTP-HTTPS"/>
<data-mapper:config name="JSON_To_ExecuteComplex" transformationGraphPath="json_to_executecomplex.grf" doc:name="JSON_To_ExecuteComplex"/>
 <flow name="dotnet-demoFlow1" doc:name="dotnet-demoFlow1">
 <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
 <data-mapper:transform config-ref="JSON_To_ExecuteComplex" doc:name="JSON To ExecuteComplex" path="dotnet"/>
 <dotnet:execute config-ref="DotNet_External_Assembly" methodName="Test.SampleComponent.Sample, Test.SampleComponent, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null | ExecuteComplex(Test.SampleComponent.Person person) -&gt; System.Object" doc:name="DotNet"/>
 </flow> 
</mule> 
----

=== 第5步。运行应用程序

您现在已准备好运行该项目！首先，您可以测试从Studio运行应用程序：

. 在Package Explorer窗格中右键单击您的应用程序。

. 选择*Run As*> *Mule Application*。

. 启动浏览器并转至`  http://localhost:8081/dotnet/?name=foo&age=10  `查看结果。
+
image:Run+application.png[润+应用]

=== 第6步。关于示例应用程序

您在Anypoint Studio中构建的流程包含消息处理器（包括HTTP连接器，数据映射器，Set Payload Transformer和DotNet连接器），并且这些消息处理器之间携带数据"Mule messages"。

Mule消息包含以下组件：

*  *Payload*：消息中包含的实际数据

*  *Properties*：消息元数据，其中可以包含用户定义的参数

在这个例子中，我们可以看到DotNet连接器能够接收来自Mule的参数，并创建并返回一个由Mule发回给调用者的新消息有效载荷。 DotNet连接器允许使用.NET组件来为Mule流提供定制逻辑。

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.6/dotnet-connector-faqs[DotNet连接器常见问题]中的DotNet连接器。

* 有关说明更高级方案的代码示例，请参阅 link:_attachments/dotnet-connector-samples.zip[dotnet-connector-samples.zip]和 link:_attachments/dotnet-connector-sdk.zip[dotnet-connector-sdk.zip]。

* 请参阅 link:/release-notes/dotnet-connector-release-notes[发行说明]。
