mule-user-guide/v/3.7/dotnet-connector-guide.adoc
=  DotNet连接器指南
:keywords: dotnet connector, dotnet, dot net, microsoft, c#, c sharp, visual studio, visual basic

DotNet连接器允许你从Mule流中调用.NET代码。

*DotNet Documents*：

*  link:/mule-user-guide/v/3.7/dotnet-connector-user-guide[DotNet连接器用户指南]
*  link:/mule-user-guide/v/3.7/dotnet-connector-migration-guide[DotNet连接器迁移指南]
*  link:/mule-user-guide/v/3.7/dotnet-connector-faqs[DotNet连接器常见问题]
*  link:/release-notes/dotnet-connector-release-notes[DotNet连接器发行说明]
*  link:_attachments/dotnet-connector-samples.zip[dotnet-connector-samples.zip]

== 先决条件

本文档假定您熟悉Mule， link:/anypoint-studio/v/5/index[Anypoint Studio界面]和 link:/mule-user-guide/v/3.7/global-elements[全球元素]。此外，假定您熟悉Microsoft .NET Framework。

要完成本教程，您需要在您的机器上安装以下组件：

*  link:http://www.microsoft.com/net[Microsoft .NET框架]
*  Anypoint Studio，Mule的图形界面。有关详细信息，请参阅 link:/anypoint-studio/v/6/download-and-launch-anypoint-studio[下载并启动Anypoint Studio]

[WARNING]
====
.NET连接器版本1.0与版本2.0不兼容。如果您是.NET Connector 1.0的现有用户，请参阅 link:/mule-user-guide/v/3.7/dotnet-connector-migration-guide[.NET连接器迁移指南]。
====

== 在Anypoint Studio中安装DotNet连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 示例

本示例介绍DotNet连接器并向您展示如何将其配置为在.NET程序集中执行方法。

该示例使用以下Mule消息处理器：

[%header%autowidth.spread]
|===
| {组件{1}}说明
| *DotNet Connector*  |从Mule流中执行Microsoft .NET代码。
| *HTTP Connector*  |使示例应用程序能够接收和发送HTTP请求。
| *Set Payload Transformer*  |集合负载转换器将负载设置为您定义的任何值。有效负载可以是文字串或Mule表达式。
| *{{0}}*  | DataMapper是一个Mule转换器，它提供简单但功能强大的复杂数据转换的可视化设计，以用于Mule流
|===

=== 第1步。创建一个.NET组件

要创建将从Mule调用的.NET组件，请启动Visual Studio并创建一个新的C＃类库项目。

要创建一个新项目：

. 选择*File*> *New*> *Project*。

. 在*New Project*对话框中，选择Visual C＃下的类库模板。将该项目命名为“Test.SampleComponent”。
+
image:dotnetcomponent.png[dotnetcomponent]

. 用下面的代码创建一个名为`Sample`的类：
+
[source, code, linenums]
----
namespace Test.SampleComponent
{
   public class Sample
   {
       public object ExecuteComplex(Person person)
       {
         person.Name += " updated from .net";          
         person.MyRide.Brand = person.MyRide.Brand.Replace("GM", Chevrolet");
         person.MyRide.Model = person.MyRide.Model + " - " + "400x";
         person.MyRide.ExteriorColor.Name += "ISH";
         person.MyRide.ExteriorColor.RGB = "no clue";
         return person;
       }
   }
}
----

. 编译项目以创建`Test.SampleComponent.dll`程序集。

. 将.dll文件复制到`C:\Sample`目录。

=== 第2步。创建一个新的Anypoint Studio项目

要开始构建此应用程序，请启动Anypoint Studio并创建一个新项目。

. 选择*File*> *New*> *Mule Project*。

. 在New Mule Project配置菜单中，为该项目提供一个名称：`dotnet_demo`。

. 点击*Finish*。

一个新的项目打开时用一个空白画布来构建流程，以及带有Message Processors的调色板在右侧。

=== 第3步。创建一个DotNet全局元素

要创建和配置DotNet全局元素，请按照下列步骤操作：

. 点击画布底部的*Global Elements*标签，然后点击*Create*。

. 使用*DotNet Connector*作为过滤器进行定位，然后选择全局类型：
+
image:global-type.png[全球型]

. 选择*DotNet: External Assembly*并点击*OK*。

. 配置外部程序集全局类型：
+
image:external-assembly.png[外部组件]
+
[%header%autowidth.spread]
|===
| {参数{1}}值
| *Name*  | Dot_Net_External_Assembly
| *Enable DataSense*  |真（选中复选框）
| *Scope*  |瞬态
| *Grant Full Trust to the .NET assembly*  |真（选中复选框）
| *Declared methods only*  |真（选中复选框）
| *Assembly Path*  | Test.SampleComponent.dll文件的路径
|===
+
配置DotNet连接器时，您将引用此全局元素。

=== 第4步。创建演示流程

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Drag an HTTP connector into the canvas, then select it to open the properties editor console.

. Add a new HTTP Listener Configuration global element:

.. In *General Settings*, click Add *button*:
+
image:httplistener.png[httplistener]
+
..  Configure the following HTTP parameters:
+
image:httparameters.png[httparameters]
+
[%header%autowidth.spread]
|===
|Field |Value
|*Port* |8081
|*Path* |dotnet
|*Host* |localhost
|*Exchange Patterns* |request-response
|*Display Name* |HTTP (or any other name you prefer)
|===

. Reference the HTTP Listener Configuration global element:
+
image:httpreference.png[httpreference]

. Drag a set payload transformer into the canvas, then select it to open the properties editor console.

. Configure the required filter parameters as follows:
+
image:set-payload-1.png[set-payload-1]
+
[%header%autowidth.spread]
|===
|Field |Value
|*Value* |`{ "name" : "bar", "lastName" :  "foo", "id" : 1, "myRide" : { "Model" : "Coupe", "Brand" : "GM", "Color" : { "Name" : "red", "RGB" : "123,220,213" } } }}`
|*Display Name* |Set Payload (or any other name you prefer)
|===
+
[NOTE]
====
The string you enter in the *Value* field represents a serialized JSON object for a Person class:

[source, code, linenums]
----
namespace Test.SampleComponent{ 
  public class Person
    {
        public string Name {
          get; set;
        }
        public int Id {
          get; set;
        }
        public string LastName {
          get; set;
        }
        public Car MyRide {
          get; set;
        }
    }
    public class Car
    {
       public string Model {
         get; set;
       }
       public string Brand {
         get; set;
       }
       public Color ExteriorColor {
         get; set;
       }
    }
}
----
====

. Drag a DataMapper from the palette, and place it into the canvas after the Set Payload transformer.

. Configure the parameters as follows:
+
image:jsontoexecutecomplex.png[jsontoexecutecomplex]
+
[%header%autowidth.spread]
|===
|Field |Value
|*Display Name* |JSON to ExecuteComplex (or any other name you prefer)
2+|*Input*
|*Type* |JSON
|*From Example* |True (Check)
|*Sample* |Enter the path to the input.json sample file.
|===
+
[NOTE]
====
Before you run this application, create a JSON sample file named *input.json* and copy the following content into it: 

[source, code, linenums]
----
"person" : { "name" : "bar", "lastName" :  "foo", "id" : 1, "myRide" : { "Model" : "Coupe", "Brand" : "GM", "Color" : { "Name" : "red", "RGB" : "123,220,213" }  } }}
----
====

. Click *Create Mapping*.
+
image:datamapper-mappingscreen.png[datamapper-mappingscreen]

. Drag the DotNet connector in the Palette, then place it into the canvas after the set payload transformer. Configure the DotNet connector as shown below.
+
image:dotnet-connector-screen.png[dotnet-connector-screen]
+
[NOTE]
====
The “Type” drop down is the .Net type that will be reflected upon to see which method it should call. The “Method” reference is the method on the type that was selected in the “Type” dropdown which will be invoked by the connector.
====
+
[%header%autowidth.spread]
|===
|Field |Value
|*Operation* |Execute
|*Method name* |Test.SampleComponent.Sample.ExecuteComplex(Test.SampleComponent.Person person) 
|*Display Name* |DotNet Connector (or any other name you prefer)
|*Config Reference* |Dot_Net_Resource_External_Assembly
|===
+
[NOTE]
====
Note that the *Config Reference* field references the DotNet global element created previously.
====

After completing the above steps, your application flow should look like this:

image:complete-application-flow.png[complete-application-flow]
....
[tab,title="XML Code"]
....
[source, xml, linenums]
----
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:dotnet="http://www.mulesoft.org/schema/mule/dotnet" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
 xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd 
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd 
http://www.mulesoft.org/schema/mule/dotnet http://www.mulesoft.org/schema/mule/dotnet/current/mule-dotnet.xsd 
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd 
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd"> 
 <dotnet:externalConfig name="DotNet_External_Assembly" scope="Transient" path="C:\Samples\Test.SampleComponent.dll" doc:name="DotNet: External Assembly"/>
<http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" basePath="dotnet" doc:name="HTTP Listener Configuration"/>
<http:connector name="HTTP_HTTPS" cookieSpec="netscape" validateConnections="true" sendBufferSize="0" receiveBufferSize="0" receiveBacklog="0" clientSoTimeout="10000" serverSoTimeout="10000" socketSoLinger="0" doc:name="HTTP-HTTPS"/>
<data-mapper:config name="JSON_To_ExecuteComplex" transformationGraphPath="json_to_executecomplex.grf" doc:name="JSON_To_ExecuteComplex"/>
 <flow name="dotnet-demoFlow1" doc:name="dotnet-demoFlow1">
 <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
 <data-mapper:transform config-ref="JSON_To_ExecuteComplex" doc:name="JSON To ExecuteComplex" path="dotnet"/>
 <dotnet:execute config-ref="DotNet_External_Assembly" methodName="Test.SampleComponent.Sample, Test.SampleComponent, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null | ExecuteComplex(Test.SampleComponent.Person person) -&gt; System.Object" doc:name="DotNet"/>
 </flow> 
</mule> 
----
....
------

=== 第5步。运行应用程序

您现在已准备好运行该项目！首先，您可以测试从Studio运行应用程序：

. 在Package Explorer窗格中右键单击您的应用程序。

. 选择*Run As*> *Mule Application*。

. 启动浏览器并转至`http://localhost:8081/dotnet/?name=foo&age=10`查看结果。
+
image:run-application.png[运行应用程序]

=== 第6步。关于示例应用程序

您在Anypoint Studio中构建的流程包含消息处理器（包括HTTP连接器，数据映射器，Set Payload Transformer和DotNet连接器），并且这些消息处理器之间携带数据"Mule messages"。

Mule消息包含以下组件：

*  *Payload*：消息中包含的实际数据

*  *Properties*：消息元数据，其中可以包含用户定义的参数

在这个例子中，我们可以看到DotNet连接器能够接收来自Mule的参数，并创建并返回一个由Mule发回给调用者的新消息有效载荷。 DotNet连接器允许使用.NET组件来为Mule流提供定制逻辑。

== 另请参阅

* 了解更多关于DotNet连接器的信息：
**  link:/mule-user-guide/v/3.7/dotnet-connector-user-guide[DotNet连接器用户指南]
**  link:/mule-user-guide/v/3.7/anypoint-extensions-for-visual-studio[适用于Visual Studio的Anypoint扩展]
**  link:/mule-user-guide/v/3.7/dotnet-connector-migration-guide[DotNet连接器迁移指南]
**  link:/mule-user-guide/v/3.7/dotnet-connector-faqs[DotNet连接器常见问题]
**  link:/release-notes/dotnet-connector-release-notes[DotNet连接器发行说明]

* 有关说明更高级方案的代码示例，请参阅 link:_attachments/dotnet-connector-samples.zip[dotnet-connector-samples.zip]和 link:_attachments/dotnet-connector-sdk.zip[dotnet-connector-sdk.zip]。
